<resources>
    <string name="app_name">KilanMusic</string>
    <string name="performer">Performer</string>
    <string name="performers">Performers</string>
    <string name="album">Album</string>
    <string name="albums">Albums</string>
    <string name="all_songs">All songs</string>
    <string name="now_playing">Now playing</string>
    <string name="main">Main</string>
    <string name="timer">00:00</string>
    <string name="title_playing">Title - Performer</string>
    <string name="name_or_title">Name or Title</string>
    <string name="genre">Genre</string>
</resources>
