<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/track_linear_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/category_now_playing"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_sixteen">

    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/image_play_layout"
        android:layout_height="@dimen/image_play_layout"
        android:layout_marginRight="@dimen/view_margin"
        android:paddingTop="@dimen/image_padding_top"
        android:src="@drawable/play"/>

    <LinearLayout
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/image"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/MainTextInList"
            android:id="@+id/title_text_view"
            tools:text="@string/title_playing"/>

        <TextView
            style="@style/TextInList"
            android:id="@+id/album_text_view"
            tools:text="@string/album"/>

    </LinearLayout>

    <TextView
        android:id="@+id/time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/timer"/>

</LinearLayout>